syntax = "proto3";

option go_package = "github.com/canonical/ubuntu-pro-for-windows/agentapi";

package agentapi;

message Empty {}

service UI {
    rpc ApplyProToken (ProAttachInfo) returns (Empty) {}
    rpc Ping (Empty) returns (Empty) {}
    rpc SubscpriptionInfo(Empty) returns (SubscriptionInfo) {}
}

message ProAttachInfo {
    string token = 1;
}

service WSLInstance {
    rpc Connected (stream DistroInfo) returns (stream Port) {}
}

message DistroInfo {
    string wsl_name = 1;
    string id = 2;
    string version_id = 3;
    string pretty_name = 4;
    bool pro_attached = 5;
    string hostname = 6;
}

message Port {
    uint32 port = 1;
}

message SubscriptionInfo {
    oneof subscriptionType {
        Empty none = 1;            // The user does not have an active subscription
        Empty manual = 2;          // The user manages its own subscription via the GUI and the registry
        Empty microsoftStore = 3;  // The user manages its own subscription via the Microsoft store
        Empty organization = 4;    // An administrator manages the subscription via the registry
    };

    string productId = 5; // The ID of the Ubuntu Pro For Windows product on the Microsoft Store.
}
